<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ddble_margin"
        android:layout_marginTop="@dimen/ddble_margin"
        android:fontFamily="@font/agency_fb_bold"
        android:text="@string/fg_login_signin"
        android:textSize="@dimen/big_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLoginEmail"
        android:layout_width="@dimen/two_h_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ddble_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/TextInputField"
            android:hint="@string/fg_hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLoginPassword"
        android:layout_width="@dimen/two_h_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="@+id/tilLoginEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tilLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/tilLoginEmail">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/TextInputField"
            android:hint="@string/fg_hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:id="@+id/btnSignIn"
        style="@style/ShapedButton"
        android:layout_marginTop="@dimen/ddble_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tilLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/tilLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilLoginPassword"
        app:layout_constraintVertical_bias="0.0"
        app:mfb_text="@string/btn_sign_in" />

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:id="@+id/btnSignInGoogle"
        style="@style/CircleButton"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:layout_constraintVertical_bias="0"
        fancy:mfb_defaultColor="@color/red"
        fancy:mfb_iconResource="@drawable/ic_gplus" />

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:id="@+id/btnSignInFace"
        style="@style/CircleButton"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignInGoogle"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintTop_toTopOf="@+id/btnSignInGoogle"
        app:layout_constraintVertical_bias="0"
        fancy:mfb_defaultColor="@color/blue"
        fancy:mfb_focusColor="@color/focusColor"
        fancy:mfb_iconResource="@drawable/ic_facebook" />

    <TextView
        android:id="@+id/tv_txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fg_login_with"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignInFace"
        app:layout_constraintEnd_toStartOf="@+id/btnSignInFace"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSignInGoogle"
        app:layout_constraintTop_toTopOf="@id/btnSignInGoogle" />

    <TextView
        android:id="@+id/tvCreateAccInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/fg_login_create_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSignInFace"
        app:layout_constraintStart_toStartOf="@+id/btnSignInGoogle"
        app:layout_constraintTop_toBottomOf="@+id/tv_txt_or"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tvCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/fg_login_create_new_text"
        app:layout_constraintEnd_toEndOf="@id/tvCreateAccInfo"
        app:layout_constraintStart_toStartOf="@id/tvCreateAccInfo"
        app:layout_constraintTop_toBottomOf="@id/tvCreateAccInfo" />

</android.support.constraint.ConstraintLayout>